...
 * @property subtitleTextColor The color of the file size/extension text
 * @property subtitleTextStyle The text style for the file size/extension
 * @property fileIconBackgroundColor The background color of the file type icon
 * @property fileIconCornerRadius The corner radius of the file type icon background
 * @property fileIconSize The size of the file type icon
 * @property downloadIconTint The tint color of the download icon
 * @property downloadAllButtonBackgroundColor The background color of the "Download All" button
 * @property downloadAllButtonTextColor The text color of the "Download All" button
 * @property downloadAllButtonTextStyle The text style for the "Download All" button
 * @property downloadAllButtonCornerRadius The corner radius of the "Download All" button
 * @property downloadAllButtonHeight The height of the "Download All" button
 * @property backgroundColor The background color of the bubble (inherited from parent)
 * @property cornerRadius The corner radius of the bubble (inherited from parent)
...
