...
    <string name="cometchat_a11y_delete_recording">Delete recording</string>
    <string name="cometchat_a11y_deleted_message">Deleted message</string>
    <string name="cometchat_a11y_document">Document</string>
    <string name="cometchat_a11y_download">Download</string>
    <string name="cometchat_a11y_download_attachment">Download attachment</string>
    <string name="cometchat_a11y_download_audio">Download audio</string>
    <string name="cometchat_a11y_download_file">Download file</string>
    <string name="cometchat_a11y_drag_handle_for_option">Drag handle for option %1$s</string>
    <string name="cometchat_a11y_duration">Duration: %1$s</string>
    <string name="cometchat_a11y_edit_preview">Edit Preview</string>
    <string name="cometchat_a11y_end_call">End Call</string>
    <string name="cometchat_a11y_error">Error: %1$s</string>
    <string name="cometchat_a11y_error_2">Error: %1$s. %2$s</string>
...
